feat: SecurityConfig와 중복 설정으로 WebConfig cors 설정 제거